configure gradle test task