@@ -35,6 +35,9 @@ apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'idea'
 
+import org.slf4j.Logger
+import org.slf4j.LoggerFactory
+
 mainClassName = 'org.main.JDriveMain'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -51,9 +54,13 @@ dependencies {
     compile     'com.google.api-client:google-api-client:1.20.0'
     compile     'com.google.oauth-client:google-oauth-client-jetty:1.20.0'
     compile     'com.google.apis:google-api-services-drive:v2-rev170-1.20.0'
-    compile     'com.google.jimfs:jimfs:1.0'
+    compile     'javax.inject:javax.inject:1'
+    compile     'com.google.inject:guice-parent:4.0'
+    compile     'org.slf4j:slf4j-log4j12:1.7.12'
+    compile     'log4j:log4j:1.2.17'
     compile     'junit:junit:4.12'
     compile     fileTree( dir: 'libs', include: '*.jar')
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
 sourceSets {
@@ -61,3 +68,45 @@ sourceSets {
         output.resourcesDir = "build/resources/"
     }
 }
+
+task hello {
+    doLast {
+        println 'Hello world!'
+        Logger slf4jLogger = LoggerFactory.getLogger('some-logger')
+        slf4jLogger.info('An info log message logged using SLF4j')
+    }
+}
+
+test {
+    println "Test task"
+    // enable TestNG support (default is JUnit)
+    useJUnit()
+
+//    // set a system property for the test JVM(s)
+//    systemProperty 'some.prop', 'value'
+//
+//    // explicitly include or exclude tests
+//    include 'org/foo/**'
+//    exclude 'org/boo/**'
+
+    // show standard out and standard error of the test JVM(s) on the console
+    testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+    }
+}
+
